Implement Consistency Groups Option
Add GUI radio button to allow selection of consistency groups.
Default is false, but if true then provide a modified policy.json
file with CG parameters configured correctly.

Change-Id: I73b2dd592c4d66945943470269d52245f05d67e8

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -7,6 +7,19 @@ attributes:
     description: 'Pure Storage will be used in a multi-backend environment'
     weight: 10
     type: "checkbox"
+  pure_cg:
+    value: "false"
+    values:
+        - data: "true"
+          label: "True"
+          description: "Enables Cinder Consistency Groups for all users and all backends (where supported)"
+        - data: "false"
+          label: "False"
+          description: "Disables Cinder Consistency Groups for all users and all backends"
+    label: "Cinder Consistency Groups"
+    description: 'Enable/Disable consistency groups for ALL tenants and users.'
+    weight: 13
+    type: "radio"
   pure_san_ip:
     value: ""
     label: 'Pure Storage Management IP (san_ip)'
@@ -36,7 +49,7 @@ attributes:
           description: "Disables multipathing for image transfers"
     label: "Pure Storage Multipath for Image Transfers (use_multipath_for_image_xfer)"
     description: 'Enable/Disable multipathing for image transfers.'
-    weight: 25
+    weight: 24
     type: "radio"
   pure_nova_multipath:
     value: "false"
