--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,8 +1,8 @@
 name: fuel-plugin-purestorage-cinder
 title: Pure Storage driver for Cinder
-version: '2.0.0'
+version: '3.0.0'
 description: Enables the Pure Storage driver in Cinder
-fuel_version: ['8.0']
+fuel_version: ['9.0']
 licenses: ['Apache License Version 2.0']
 authors: ['Simon Dodsley <simon@purestorage.com>']
 homepage: 'https://github.com/openstack/fuel-plugin-purestorage-cinder'
@@ -11,13 +11,8 @@ is_hotpluggable: false
 
 releases:
   - os: ubuntu
-    version: 2015.1-8.0
-    mode: ['ha', 'multinode']
-    deployment_scripts_path: deployment_scripts/
-    repository_path: repositories/ubuntu
-  - os: ubuntu
-    version: liberty-8.0
-    mode: ['ha', 'multinode']
+    version: mitaka-9.0
+    mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
 
