--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -117,10 +117,10 @@ attributes:
     value: "true"
     values:
         - data: "true"
-          label: "True"
+          label: "Default"
           description: 'Use default replication retention vlaues (see documentation)'
         - data: "false"
-          label: "False"
+          label: "Manual"
           description: 'Manually define replication retention settings'
     label: 'Replication Retention Configuration'
     description: 'Configure the remote replication retention parameters or leave as default'
@@ -131,52 +131,52 @@ attributes:
          action: "hide"
   pure_interval:
     value: "900"
-    label: ""
-    description: ""
+    label: "Replication internal (in seconds)"
+    description: "(pure_replica_interval_default)"
     weight: 31
     type: "text"
     restrictions:
-       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' and settings:fuel-plugin-purestorage-cinder.pure_replicationi_default.value != 'true')"
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value == 'true' and settings:fuel-plugin-purestorage-cinder.pure_replication_default.value == 'true')"
          action: "hide"
     regex:
       source: '^(34560000|[1-3][0-4][0-5][0-5][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9]|[3-9][0-9][0-9])$'
       error: "Error: Range for snapshot replication interval is 300 - 34560000 seconds"
   pure_retention_short:
     value: "14400"
-    label: ""
-    description: ""
+    label: "Retention period for snapshots on target(in seconds)"
+    description: "(pure_replica_retention_short_term_default)"
     weight: 32
     type: "text"
     restrictions:
-       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' and settings:fuel-plugin-purestorage-cinder.pure_replicationi_default.value != 'true')"
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value == 'true' and settings:fuel-plugin-purestorage-cinder.pure_replication_default.value == 'true')"
          action: "hide"
     regex:
       source: '^(34560000|[1-3][0-4][0-5][0-5][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9][0-9]|[1-9][0-9][0-9][0-9]|[1-9][0-9][0-9]|[6-9][0-9])$'
       error: "Error: Range for maximum time all snapshots can be retained for is 60 - 34560000 seconds"
-  pure_retention_long:
-    value: "7"
-    label: ""
-    description: ""
-    weight: 33
-    type: "text"
-    restrictions:
-       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' and settings:fuel-plugin-purestorage-cinder.pure_replicationi_default.value != 'true')"
-         action: "hide"
-    regex:
-      source: '^(4000|[1-3][0-9][0-9][0-9]|[1-9][0-9][0-9]|[1-9][0-9]|[1-9])$'
-      error: "Error: Maximum number of days to keep snapshots is 4000"
   pure_retention_long_day:
     value: "3"
-    label: ""
-    description: ""
+    label: "Number of snapshots to keep per day"
+    description: "(pure_replica_retention_long_term_per_day_default)"
     weight: 34
     type: "text"
     restrictions:
-       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' and settings:fuel-plugin-purestorage-cinder.pure_replicationi_default.value != 'true')"
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value == 'true' and settings:fuel-plugin-purestorage-cinder.pure_replication_default.value == 'true')"
          action: "hide"
     regex:
       source: '^(1440|1[0-4][0-3][0-9]|[1-9][0-9][0-9]|[1-9][0-9]|[1-9])$'
       error: "Error: Maximum number of snapshots per day is 1440"
+  pure_retention_long:
+    value: "7"
+    label: "Number of days to keep snapshots"
+    description: "(pure_replica_retention_long_term_default)"
+    weight: 33
+    type: "text"
+    restrictions:
+       - condition: "settings:fuel-plugin-purestorage-cinder.pure_replication.value != 'true' or (settings:fuel-plugin-purestorage-cinder.pure_replication.value == 'true' and settings:fuel-plugin-purestorage-cinder.pure_replication_default.value == 'true')"
+         action: "hide"
+    regex:
+      source: '^(4000|[1-3][0-9][0-9][0-9]|[1-9][0-9][0-9]|[1-9][0-9]|[1-9])$'
+      error: "Error: Maximum number of days to keep snapshots is 4000"
   pure_glance_image_cache:
     value: "false"
     values:
