--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ name: fuel-plugin-purestorage-cinder
 title: Pure Storage driver for Cinder
 version: '3.0.0'
 description: Enables the Pure Storage driver in Cinder
-fuel_version: ['9.0']
+fuel_version: ['8.0']
 licenses: ['Apache License Version 2.0']
 authors: ['Simon Dodsley <simon@purestorage.com>']
 homepage: 'https://github.com/openstack/fuel-plugin-purestorage-cinder'
@@ -11,7 +11,7 @@ is_hotpluggable: false
 
 releases:
   - os: ubuntu
-    version: mitaka-9.0
+    version: liberty-8.0
     mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
