Make glance image cache IDs idempotent
There is no easy way to get a keystone user or tenant ID through
puppet, so in the interim we will use a random string for each
of these.

hey are arbitrary values anyway and don't need to link to a true
user or tenant.

Change-Id: I005436ba206753a0ab7a627fb10d66d194eba1f1

--- a/environment_config.yaml
+++ b/environment_config.yaml
@@ -205,7 +205,7 @@ attributes:
   pure_glance_cache_size:
     value: '0'
     label: 'Glance Image Cache Size (image_volume_cache_max_size_gb)'
-    description: 'Maximum size for Glance Image Cache [GB] 90 = no limit)'
+    description: 'Maximum size for Glance Image Cache [GB] (0 = no limit)'
     weight: 37
     type: "text"
     restrictions:
