--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,7 +7,7 @@ licenses: ['Apache License Version 2.0']
 authors: ['Simon Dodsley <simon@purestorage.com>']
 homepage: 'https://github.com/openstack/fuel-plugin-purestorage-cinder'
 groups: ['storage::cinder']
-is_hotpluggable: false
+is_hotpluggable: true
 
 releases:
   - os: ubuntu
