Update multipath conf file
Default for muultipath find_multipaths option in default
has changed from 'no' to 'yes', so we need to set this back
to 'no'

Change-Id: I0ee1a0b80e8597c5393d7f6a961bd9398dee06e8

--- a/deployment_scripts/puppet/modules/plugin_purestorage_cinder/files/multipath.conf
+++ b/deployment_scripts/puppet/modules/plugin_purestorage_cinder/files/multipath.conf
@@ -8,6 +8,7 @@ defaults {
   verbosity	2
   polling_interval	10
   wwids_file	/etc/multipath/wwids
+  find_multipaths no
 }
 
 blacklist_exceptions {
