--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -4,6 +4,7 @@
   required_for: [post_deployment_end]
   requires: [post_deployment_start]
   type: puppet
+  version: 3.0.0
   parameters:
     puppet_manifest: puppet/manifests/controller.pp
     puppet_modules:  "puppet/modules/:/etc/puppet/modules/"
@@ -13,6 +14,7 @@
   required_for: [post_deployment_end]
   requires: [post_deployment_start]
   type: puppet
+  version: 3.0.0
   parameters:
     puppet_manifest: puppet/manifests/compute.pp
     puppet_modules:  "puppet/modules/:/etc/puppet/modules/"
